# SAT-network

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  batch.sh  build_assumptions.py  main.py  ml.py  quantified_synth.py  run_batches.sh  setup.sh  test.py  test_cpp_solver.py
.github/workflows/: cpp-ci.yml
configs/: README.md  adder.json  adder3.json  gol.json  gol1.json  gol2.json  sloppy-adder.json  sloppy-adder3.json
cpp/: README.md  TODO.md  assumptions.cpp  assumptions.hpp  cli.cpp  cli.hpp  config.cpp  config.hpp  datasets.cpp  datasets.hpp  encoding.cpp  encoding.hpp  logging.cpp  logging.hpp  mask.cpp  mask.hpp  postprocess.cpp  postprocess.hpp  postprocess_common.cpp  postprocess_internal.hpp  postprocess_mask.cpp  postprocess_resynthesis.cpp  profile.hpp  program.cpp  program.hpp  sat_synth_cpp.cpp  solver.cpp  solver.hpp
cpp/tests/: assumptions_tests.cpp  cli_tests.cpp  config_tests.cpp  cpp_unit_tests.cpp  datasets_tests.cpp  mask_tests.cpp  postprocess_tests.cpp  program_tests.cpp  solver_tests.cpp
dataset_plugins/: __init__.py  adder.py  adder3.py  cellular_automata.py  gol.py  gol1.py  gol2.py  sloppy_adder.py  sloppy_adder3.py
